--- a/partials/header.html
+++ b/partials/header.html
@@ -10,8 +10,7 @@
       <a href="products/">プロダクト</a>
       <a href="philosophy/">理念</a>
       <a href="columns/">新着情報</a>
-      <a href="members/">メンバー</a>
-      <a href="./#company">会社情報</a>
+      <a href="members/">チーム紹介</a>
       <a href="contact/">お問い合わせ</a>
     </nav>
 
@@ -49,8 +48,7 @@
         <a href="products/">プロダクト</a>
         <a href="philosophy/">理念</a>
         <a href="columns/">新着情報</a>
-        <a href="members/">メンバー</a>
-        <a href="./#company">会社情報</a>
+        <a href="members/">チーム紹介</a>
         <a href="contact/">お問い合わせ</a>
       </nav>
 
