--- a/partials/header.html
+++ b/partials/header.html
@@ -8,7 +8,7 @@
 
     <nav class="nav" aria-label="サイトメニュー">
       <a href="products/">プロダクト</a>
-      <a href="philosophy/">理念</a>
+      <!-- <a href="philosophy/">理念</a> -->
       <a href="columns/">新着情報</a>
       <a href="members/">チーム紹介</a>
       <a href="contact/">お問い合わせ</a>
@@ -46,7 +46,7 @@
 
       <nav class="nav" aria-label="モバイルサイトメニュー">
         <a href="products/">プロダクト</a>
-        <a href="philosophy/">理念</a>
+        <!-- <a href="philosophy/">理念</a> -->
         <a href="columns/">新着情報</a>
         <a href="members/">チーム紹介</a>
         <a href="contact/">お問い合わせ</a>
